release/1.7.8/VERSION.md
# 1.7.8

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.7.8```   |
| Release Time   | ```2014-04-09T07:58:16+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```1.7.4```   |
| sha1   | ```545510a60f526b9aa8a38f9c0bc7a74235d21675```   |
| size   | ```59675```   |
| total size  | ```112252715```  |
| url       | ```https://launchermeta.mojang.com/v1/packages/545510a60f526b9aa8a38f9c0bc7a74235d21675/1.7.4.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```83ae44189888a873f46f7509a87ebdb6dc785741```   |
| size   | ```5269934```   |
| url       | ```https://launcher.mojang.com/v1/objects/83ae44189888a873f46f7509a87ebdb6dc785741/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```c69ebfb84c2577661770371c4accdd5f87b8b21d```   |
| size   | ```9606088```   |
| url       | ```https://launcher.mojang.com/v1/objects/c69ebfb84c2577661770371c4accdd5f87b8b21d/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```jre-legacy```   |
| version   | ```8```   |